tolk-tester/tests/invalid-syntax/err-3002.tolk
tolk

/**
@compilation_should_fail
@stderr expected semver, like `tolk 1.2`, got ``
 */
